BWA-1414 — Fix wrapping with overlong text

--- a/style.css
+++ b/style.css
@@ -1199,6 +1199,7 @@ select.bluvue-annotation-unit-edit {
 
 .notes-body-with-border {
     border: 3px solid transparent;
+    word-wrap: break-word;
 }
 
 .notes-body + hr {
